--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -3,13 +3,41 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/master/LICENSE)
  */
-
+html{
+	
+	height:100%;
+} 
 body {
   padding-top: 54px;
+  height:100%;
 }
 
 @media (min-width: 992px) {
   body {
     padding-top: 56px;
   }
+}
+
+/*
+   Custom style 
+*/
+
+
+.wrapper{
+	
+	min-height:100%;
+	position: relative;
+	
+}
+
+.content{
+	
+	padding-bottom:60px;/*height for a footer*/
+}
+
+.footer{
+	
+	posion:absolute;
+	bottom:15px;
+	height:60px;
 }
